# over-under

./: .clang-format  .gitignore  .gitmodules  C++ Guide.md  C++ Reference Guide.md  Cargo.toml  DESIGN.md  Makefile  README-SpinUp.md  README.md  project.pros  rust-toolchain  rustfmt.toml  vex-rt-README.md
.devcontainer/: Dockerfile  devcontainer.json
old-code/v5_hal/: CMakeLists.txt
old-code/v5_hal/firmware/include/: main.h
old-code/v5_hal/firmware/include/nodes/: NodeManager.h
old-code/v5_hal/firmware/src/: main.cpp
old-code/v5_hal/firmware/src/nodes/: NodeManager.cpp
spin-up/: .gitignore  README.md
spin-up/pros/: pros.h
spin-up/pros/pros/: motors.hpp
spin-up/src/: main.cpp  main.h
spin-up/src/drivetrain/: holonomic_drive.h
spin-up/src/factory/: motor_factory.cpp  motor_factory.h
spin-up/src/hardware/: pros_controller.h  pros_motor.h  pros_motor_definition.h
spin-up/src/interface/: holonomic-drive.h
src/: drive.rs  file_system.rs  main.rs  robot_15_in.rs  robot_24_in.rs  smart_motor.rs  smart_motor_group.rs
src/constant/: constants.h  drivetrain_constants.h  motor_constants.h
src/drivetrain/: holonomic_drive.cpp  holonomic_drive.h  holonomic_motors.h  tank_drive.cpp  tank_drive.h  tank_motors.h
src/factory/: motor_factory.h
src/hardware/: pros_controller.cpp  pros_controller.h  pros_motor.cpp  pros_motor_cartridge.cpp  pros_motor_cartridge.h  pros_motor_group.cpp  pros_motor_group.h
src/interface/: controller.h  encoder.h  motor.h
src/v5_hal/firmware/include/: main.h
src/v5_hal/firmware/src/: main.cpp
(+5 files in other folders)
