[package]
name = "over-under-rust"
version = "0.1.0"
authors = ["MSOE"]
edition = "2021"

[dependencies]
libc = { version = "0.2.148", default-features = false }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.vex-rt]
# Comment out the version line and uncomment the git line to use pre-release versions.
version = "0.15.1"
# git = "https://gitlab.com/qvex/vex-rt.git"
